linotp (3.3~0dev-1) buster-dev; urgency=low

  Features:
  * the manage ui login will no longer use refresh and reloads
  * method to provide context information for manage ui
  * new API endpoints to retrieve tokens:
    * /api/v2/tokens
    * /api/v2/tokens/<serial>
  * new API endpoint to retrieve realms:
    * /api/v2/realms
  * support for Flask 2 installation

  Fix:
  * After a logout the jwt token can not be reused

 -- LinOTP Packaging <packaging@linotp.de>  Wed, 23 Feb 2022 08:51:51 +0100

linotp (3.2.1~0dev-1) buster-dev; urgency=low

  Fixes:
  * Audit key verification errors solved by using newer version of pycryptodomex.
  * Remove weak file permissions in config dir.

  Removed:
  * Debian postinst no longer manages admin users. Use the linotp cli instead.
  * Removed deprecated variables from postint.

 -- LinOTP Packaging <packaging@linotp.de>  Fri, 15 Jul 2022 12:00:00 +0100

linotp (3.2-1) buster-dev; urgency=low

  Breaking Changes:
  * The helpdesk controller has been removed.
  * Apache-based admin authentication is no longer supported.
  * Audit Trail export is now ordered descending (latest logs first) when
    done from the Manage-UI.
  * Admin authentication: 'Cross site scripting request forgery (CSRF)' is no longer
    handled via the session request parameter. Instead, a CSRF-protection token, which is
    available via cookies, must be sent in the request header. Non-modifying requests
    can be requested via 'GET' and do not need to send the CSRF token. The session parameter
    that was used before should be omitted. API endpoints restricted to accept only via 'POST'
    must use the new header. See the Migration guide for further details.
  * Some API endpoints are now restricted to the specific HTTP method which they can be used with.
    Endpoints requiring an admin authentication are now restricted to the POST method if they
    are modifying data. The allowed HTTP methods are highlighted in the API documentation.