@@ -8,6 +8,8 @@ linotp (3.3~0dev-1) buster-dev; urgency=low
     * /api/v2/tokens/<serial>
   * new API endpoint to retrieve realms:
     * /api/v2/realms
+  * new API endpoint to retrieve resolvers:
+    * /api/v2/resolvers
   * support for Flask 2 installation
 
   Fix:
